优化跨平台安装启动流程